...
                            amount = newAmount
                        }
                    },
                    modifier = Modifier
                        .fillMaxWidth()
                        .padding(end = 4.dp)
                        .background(Color.Transparent).testTag("AmountField"),
                    textStyle = TextStyle(
                        fontSize = 34.sp,
                        fontWeight = FontWeight.Normal,
                        color = Color.Black,
                        textAlign = TextAlign.End
                    ),
...
                NewTextField(
                    value = note,
                    onValueChange = { note = it },
                    placeholder = { Text("Enter a note", color = Color.Gray) },
                    modifier = Modifier
                        .weight(1f)
                        .align(Alignment.CenterVertically).testTag("NoteField"),
                    singleLine = true,
                    colors = NewTextFieldDefaults.colors(
                        unfocusedContainerColor = Color.White,
                        focusedContainerColor = Color.White,
                        disabledContainerColor = Color.White,
                        unfocusedIndicatorColor = Color.Transparent,
...
                                        fontWeight = FontWeight.Medium
                                    )
                                }
                                "✔" -> {
                                    Icon(
                                        painter = painterResource(id = R.drawable.check_),
                                        contentDescription = "Check Icon",
                                        tint = Color.Black,
                                        modifier = Modifier.size(20.dp)
                                    )
                                }
                                else -> {
                                    Text(
...
