...
                                TransactionType.INCOME -> "${incomeAmount}"
                                TransactionType.BALANCE -> "${incomeAmount - expenseAmount}"
                            } ,
                            modifier = when (category) {
                                TransactionType.EXPENSES -> Modifier.testTag("ExpensesField")
                                TransactionType.INCOME -> Modifier.testTag("IncomeField")
                                TransactionType.BALANCE -> Modifier.testTag("BalanceField")
                            }
                        )
                    }
                }
            }
        }
...
